# httpserver

./: .gitignore  CMakeLists.txt  README.md  server.conf
includes/: client_conn_lib.h  client_process_functions.h  confuse_config.h  http_codes.h  server.h  signal_lib.h  socket_lib.h  thread_pool_lib.h
pythonClient/: client.py
src/: server.c
srclib/: client_conn_lib.c  client_process_functions.c  confuse.c  confuse_lexer.c  signal_lib.c  socket_lib.c  thread_pool_lib.c
